# toy-box-salary-accumulation

./: README.md  package-lock.json  package.json
src/: App.vue
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  main.rs
src/assets/: main.css
src/components/: MenuList.vue  PaydayGrid.vue  ProgressBar.vue  SettingsModal.vue
src/composables/: useCountdown.ts  useSalaryAccumulator.ts  useSettings.ts
